<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.auth.login.LoginActivity">

    <ImageView
        android:id="@+id/img_dicoding_login"
        android:layout_width="300dp"
        android:layout_height="175dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/logo_description"
        android:scaleType="centerCrop"
        android:src="@drawable/dicoding_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_header_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:alpha="0"
        android:text="@string/text_header_login"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_dicoding_login"
        app:layout_constraintStart_toStartOf="@+id/img_dicoding_login"
        app:layout_constraintTop_toBottomOf="@+id/img_dicoding_login"
        tools:alpha="1" />

    <com.tms.dicodingstory.component.CustomEmailEditText
        android:id="@+id/login_email_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="@+id/tv_header_login"
        app:layout_constraintStart_toStartOf="@+id/tv_header_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_header_login"
        tools:alpha="1" />

    <com.tms.dicodingstory.component.CustomPasswordEditText
        android:id="@+id/login_password_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="@+id/login_email_form"
        app:layout_constraintStart_toStartOf="@+id/login_email_form"
        app:layout_constraintTop_toBottomOf="@+id/login_email_form"
        tools:alpha="1" />

    <ProgressBar
        android:id="@+id/login_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/login_password_form"
        app:layout_constraintStart_toStartOf="@+id/login_password_form"
        app:layout_constraintTop_toBottomOf="@+id/login_password_form" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:alpha="0"
        android:backgroundTint="@color/navy_blue"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="@+id/login_password_form"
        app:layout_constraintStart_toStartOf="@+id/login_password_form"
        app:layout_constraintTop_toBottomOf="@+id/login_password_form"
        tools:alpha="1" />

    <TextView
        android:id="@+id/tv_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="0"
        android:text="@string/have_no_account"
        app:layout_constraintBottom_toTopOf="@+id/btn_go_to_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:alpha="1" />

    <TextView
        android:id="@+id/btn_go_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="0"
        android:text="@string/sign_up"
        android:textColor="@color/navy_blue"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:alpha="1" />


</androidx.constraintlayout.widget.ConstraintLayout>